2004-11-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/grace-engraver.cc (start_translation_timestep): split
	scm_cadddr
	
2004-11-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/quote-iterator.cc (Module): remove old quote-iterator

	* scm/define-music-types.scm (music-descriptions): move
	NewQuoteMusic over QuoteMusic

	* Documentation/user/notation.itely (Formatting cue notes): use
	\cueDuring.

	* lily/new-quote-iterator.cc (quote_ok): new function.

	* input/regression/quote-cue-during.ly: new file.

	* input/regression/quote-grace.ly: new file.

	* scm/define-context-properties.scm (Module): change definition of
	graceSettings

	* lily/context-property.cc (Module): rename from
	translator-property.cc

	* lily/context.cc (context_name_symbol): new function

	* lily/grace-engraver.cc: new file. Set properties for grobs based
	on the grace-ness of now_moment().

	* scm/music-functions.scm (add-grace-property): use list
	iso. vector for graceSettings
	remove set-{start,stop}-grace-properties. 

	* lily/new-quote-iterator.cc (construct_children): set
	quote_outlet_ if no quoted-context-{id,type} specified.

	* scripts/convert-ly.py (conv): \quote -> \quoteDuring.

	* lily/parser.yy (command_element): remove \quote.

	* ly/music-functions-init.ly (location): add quoteDuring music
	function. 

	* lily/lexer.ll: allow \encoding in lyrics as well.  Remove
	optional semicolon. (backportme)

2004-11-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* python/GNUmakefile (STEPMAKE_TEMPLATES): Unset USER_LDFLAGS, no
	need to link to GUILE et al.

2004-11-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-music-properties.scm (all-music-properties): add
	quoted-context-type, quoted-context-id.

	* scm/lily.scm (type-check-list): new function.
	
	* scm/lily-library.scm: new file. Generic library routines.

	* lily/parser.yy (Generic_prefix_music): move typechecking out of
	parser.

	* ly/music-functions-init.ly: add quoteDuring function.
