@@ -1,5 +1,12 @@
 2004-11-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/slur.cc: add 'positions to interface
+
+	* lily/main.cc: reinstate PS as standard output format. 
+
+	* scm/framework-tex.scm (output-preview-framework): print systems
+	up to first non title system.
+
 	* lily/grace-engraver.cc (start_translation_timestep): split
 	scm_cadddr
 	
